sync up with ebay integration

--- a/app/views/items/edit.html.erb
+++ b/app/views/items/edit.html.erb
@@ -38,9 +38,9 @@
 					</div>
 				
 					<div class="control-group" id="last_name" style="padding-top:2%">
-						<label class="control-label" for="inputError" style="margin-left:15%;float:left"><strong>Buy it now Price:</strong> </label>
+						<label class="control-label" for="inputError" style="margin-left:15%;float:left"><strong>Current Price:</strong> </label>
 						<div class="controls">
-							<input type="tetx" name="price" value="<%= @item[:buy_it_now_price]%>" style="margin-left:5%">
+							<input type="tetx" name="price" value="<%= @item[:selling_status][:current_price]%>" style="margin-left:5%">
 						</div>
 					</div>
 					
