--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -51,12 +51,9 @@
 							</li>
 							
 							<li>
-								<a class="ajax-link" href="/items/set_formulas"><span class="hidden-tablet">Set Items formula</span></a>
+								<a class="ajax-link" href="/set_formulas"><span class="hidden-tablet">Set Items formula</span></a>
 									
-							<li>
-								<a class="ajax-link" href="#" onclick="alert('Under Implementation');return false;"<i class="icon-user"></i><span class="hidden-tablet">Orders</span></a>
-							</li>
-							
+						
 							<li>
 								<a class="ajax-link" href="#" onclick="alert('Under Implementation');return false;"><span class="hidden-tablet">Settings</span></a>
 							</li>	
