--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -24,7 +24,10 @@
 			<table class="table table-striped table-bordered bootstrap-datatable datatable">
 				<thead>
 					<tr>
-					 	<td colspan="5"><button type="submit" class="btn btn-primary bulk_update" style="float:left">Bulk Price Update</button></td>	
+					 	<td colspan="6"><button type="submit" class="btn btn-primary bulk_update" style="float:left">Bulk Price Update</button>
+					 		<a href="<%=  items_path(:sync => "sync")%>"><button type="Button" class="btn btn-primary" style="float:left;margin-left:10px;">Sync With Ebay</button></a>
+					 	</td>
+					 	
 					</tr>
 					<tr>
 						<td width="4%">Select</td>
@@ -45,7 +48,7 @@
 								<td class="center"><%= item.item_id %></td>
 								<td class="center"><img src="<%= item.picture_url %>" height="50px" width="100px"></td>
 								<td class="center"><a href="<%= item.view_url %>" target="_blank"><%= item.title %></a></td>
-								<td class="center">equation</td>
+								<td class="center"><%= item.formula %></td>
 								<td class="center"><%= item.quantity_available %></td>
 								<td class="center"><%= item.currency %>&nbsp;<%= item.buy_it_now_price %></td>
 								<td class="center"><input type="text" name="price_<%= item.item_id%>" id="price_<%= item.item_id%>" style="width:90%"></td>
@@ -92,7 +95,7 @@
 			});
 			
 			if(bool) {
-				alert("submit");
+				alert("Under Implementation!!");
 			}
 		})
 	});
