--- a/app/views/set_formulas/index.html.erb
+++ b/app/views/set_formulas/index.html.erb
@@ -36,7 +36,7 @@
 					<% @items.each do |item| %>
 							<tr>
 								<td class="center"><%= item.item_id %></td>
-								<td class="center"><a href="<%= item.view_url %>" target="_blank"><%= item.title %></a></td>
+								<td class="center"><a href="<%= item.view_url.force_encoding("UTF-8") %>" target="_blank"><%= item.title.force_encoding("UTF-8") %></a></td>
 								<td class="center"><%= item.formula %></td>
 								<td class="center"><%= item.game_platform %></td>
 								<td class="center"><%= item.category_name %></td>
