--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -17,9 +17,8 @@
 		</div>
 		<% end %>
 		
-		
-		
-		<div class="box-content">
+	<div class="box-content">
+		<%= form_tag bulk_update_items_path, :id => "bulk_form" do %>
 			<% if @items.present? %>
 				<tbody>
 					<tr><td colspan="6">
@@ -28,6 +27,7 @@
 						</div>
 					</tr>	
 				</tbody>
+			<% end %>
 			
 			<table class="table table-striped table-bordered bootstrap-datatable datatable">
 				<thead>
@@ -49,7 +49,7 @@
 						<td width="10%">Actions</td>
 					</tr>
 				</thead>
-				
+				<% if @items.present? %>
 					<% @items.each do |item| %>
 							<tr>
 								<td class="center"><input type="checkbox" name="item[]" value="<%= item.item_id %>" class="chk"></td>
@@ -78,6 +78,7 @@
 				  <% end %>	
 				
 			</table>
+			<% end %>
 		</div>
 	</div><!--/span-->
 
@@ -110,7 +111,7 @@
 			});
 			
 			if(bool) {
-				alert("Under Implementation!!");
+				jQuery("#bulk_form").submit();
 			}
 		})
 	});
