--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,10 +21,8 @@
 						<%#= image_tag "stepleaderlogo.jpeg"%> </span>
 					</a>
 					<div class="pull-right" style="margin-top:25px;">
-					<span>Welcome &nbsp; <%= session[:name] %></span>&nbsp;&nbsp;
-						
+					<span>Welcome &nbsp; <%= session[:name] %></span>&nbsp;|&nbsp;
 						<span style="padding-left:10px;"><b><%= link_to "Logout", logout_sessions_path, :style => "color:#ffffff" %></span>
-						
 					</div>
 				</div>
 			</div>
@@ -38,14 +36,10 @@
 					<div class="well nav-collapse sidebar-nav">
 						<ul class="nav nav-tabs nav-stacked main-menu">
 							<li>
-								<a class="ajax-link" href="#" onclick="alert('Under Implementation');return false;"><span class="hidden-tablet">Admin Users</span></a>
-							
-							</li>
-							<li>
 								<a class="ajax-link" href="/items"><span class="hidden-tablet">Items</span></a>
 								<ul class="children" style="display: block;list-style:none">
 									<% @country_wise_items.each do |item_wise_countrys|%>
-										<li style="background-image: none;"><a href="<%= items_path(:country => item_wise_countrys.country) %>"><%= item_wise_countrys.country %>&nbsp;(<%= item_wise_countrys.item_count %>)</a></li>
+										<li style="background-image: none;"><i class="icon-arrow-right pull-left"></i>&nbsp;<a href="<%= items_path(:country => item_wise_countrys.country) %>"><%= item_wise_countrys.country %>&nbsp;(<%= item_wise_countrys.item_count %>)</a></li>
 									<% end %>
 								</ul>
 							</li>
@@ -54,17 +48,19 @@
 								<a class="ajax-link" href="/set_formulas"><span class="hidden-tablet">Set Items formula</span></a>
 								<ul class="children" style="display: block;list-style:none">
 									<% @country_wise_items.each do |item_wise_countrys|%>
-										<li style="background-image: none;"><a href="<%= set_formulas_path(:country => item_wise_countrys.country) %>"><%= item_wise_countrys.country %>&nbsp;(<%= item_wise_countrys.item_count %>)</a></li>
+										<li style="background-image: none;"><i class="icon-arrow-right pull-left"></i>&nbsp;<a href="<%= set_formulas_path(:country => item_wise_countrys.country) %>"><%= item_wise_countrys.country %>&nbsp;(<%= item_wise_countrys.item_count %>)</a></li>
 									<% end %>
 								</ul>
 							</li>
 						
 							<li>
-								<a class="ajax-link" href="#" onclick="alert('Under Implementation');return false;"><span class="hidden-tablet">Settings</span></a>
+								<a class="ajax-link" href="#"><span class="hidden-tablet">Jobs</span></a>
+								<ul class="children" style="display: block;list-style:none">
+									<li style="background-image: none;"><i class="icon-arrow-right pull-left"></i>&nbsp;<a href="<%= pending_jobs_path() %>">Pending Jobs</a></li>
+									<li style="background-image: none;"><i class="icon-arrow-right pull-left"></i>&nbsp;<a href="<%= completed_jobs_path() %>">Completed Jobs</a></li>
+								
+								</ul>	
 							</li>	
-									
-									
-							
 						</ul>
 					</div><!--/.well -->
 				</div><!--/span-->
