--- a/app/views/set_formulas/edit.html.erb
+++ b/app/views/set_formulas/edit.html.erb
@@ -40,7 +40,7 @@
 					<div class="control-group" id="last_name" style="padding-top:2%">
 						<label class="control-label" for="inputError" style="margin-left:15%;float:left"><strong>Formula:</strong> </label>
 						<div class="controls">
-							<%= f.text_field :formula, :style => "margin-left:15px" %></br>Note: only use base_price for having base price in formula
+							<%= f.text_field :formula, :style => "margin-left:15px" %></br>Note: only use base_price for having base price in formula and make sure to include 0 before decimal point for decimal number.
 							
 						</div>
 					</div>
