--- a/app/views/set_formulas/edit.html.erb
+++ b/app/views/set_formulas/edit.html.erb
@@ -46,6 +46,14 @@
 					</div>
 					
 					<div class="control-group" id="last_name" style="padding-top:2%">
+						<label class="control-label" for="inputError" style="margin-left:15%;float:left"><strong>Game coins amount:</strong> </label>
+						<div class="controls">
+							<%= f.text_field :game_coins_amount, :style => "margin-left:15px" %>
+							
+						</div>
+					</div>
+					
+					<div class="control-group" id="last_name" style="padding-top:2%">
 						<label class="control-label" for="inputError" style="margin-left:15%;float:left"><strong>Game Platform:</strong> </label>
 						<div class="controls">
 							<%= f.select(:game_platform, ['XBOX', 'PS'], {}, 	{:style => "margin-left:15px"}) %>
