--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -11,6 +11,42 @@
 		<div class="box-header well" data-original-title>
 			<h2> Items</h2>
 		</div>
+		
+		
+		
+		<div class="row-fluid sortable">
+	<div class="box span12">
+		<div class="box-header well" data-original-title>
+			<h2>Search</h2>
+		</div>
+		
+		
+		<div class="box-content">
+			<%= form_tag items_path, {:class => "form-horizontal", :method => 'get'}  do |f| %>
+				<fieldset>
+					<input type="hidden" name="country" value="<%= params[:country]%>">
+					<div class="control-group">
+						<label class="control-label" for="inputError">Game Platform:</label>
+						<div class="controls">
+							<%= select_tag(:game_plateform, options_for_select(['XBOX', 'PS'], params[:game_plateform]), :include_blank => true) %>
+						</div>
+					</div>
+					
+					<div class="form-actions">
+						<button type="submit" class="btn btn-primary">
+							Search
+						</button>
+						<button class="btn" type ="button" id="cancel_btn">
+							Cancel
+						</button>
+					</div>
+				</fieldset>
+			<% end %>
+	    </div>
+	</div><!--/span-->
+
+</div><!--/row-->
+
 		<% if  params[:country].present? && @country_bprice.present? %>
 		<div style="padding-left:10px;padding-top:10px">
 			<h4>Base Price for <%= params[:country]%> Country: <%= @country_bprice.base_price %></h4>
@@ -39,9 +75,11 @@
 					</tr>
 					<tr>
 						<th width="4%"><input type="checkbox" id="all_chk">&nbsp;All</th>
-						<td width="10%">Item Id</td>
-						<td width="10%">Picture</td>
-						<td width="30%">Item Title</td>
+						<td width="9%">Item Id</td>
+						<td width="8%">Picture</td>
+						<td width="22%">Title</td>
+						<td width="8%">Game Platform</td>
+						
 						<td width="10%">Equation</td>
 						<td width="8%">Quantity Available</td>
 						<td width="7%">Price</td>
@@ -54,8 +92,9 @@
 							<tr>
 								<td class="center"><input type="checkbox" name="item[]" value="<%= item.item_id %>" class="chk"></td>
 								<td class="center"><%= item.item_id %></td>
-								<td class="center"><img src="<%= item.picture_url %>" height="50px" width="100px"></td>
+								<td class="center"><img src="<%= item.picture_url %>" height="50px" width="75px"></td>
 								<td class="center"><a href="<%= item.view_url %>" target="_blank"><%= item.title %></a></td>
+								<td class="center"><%= item.game_platform %></td>
 								<td class="center"><%= item.formula %></td>
 								<td class="center"><%= item.quantity_available %></td>
 								<td class="center"><%= item.currency %>&nbsp;<%= item.buy_it_now_price %></td>
@@ -116,5 +155,13 @@
 		})
 	});
 	
+</script>	
+
+<script type="text/javascript">
+	jQuery(document).ready(function() {
+		jQuery("#cancel_btn").click(function(){
+			location.href = "<%= items_path %>";
+		});	
+	});
 </script>	
 
