--- a/app/views/set_formulas/edit.html.erb
+++ b/app/views/set_formulas/edit.html.erb
@@ -56,7 +56,7 @@
 					<div class="control-group" id="last_name" style="padding-top:2%">
 						<label class="control-label" for="inputError" style="margin-left:15%;float:left"><strong>Game Platform:</strong> </label>
 						<div class="controls">
-							<%= f.select(:game_platform, ['XBOX', 'PS'], {}, 	{:style => "margin-left:15px"}) %>
+							<%= f.select(:game_platform, ['XBOX', 'PS'], {:prompt => '-Select-'}, {:style => "margin-left:15px"}) %>
 						</div>
 					</div>
 					
