--- a/app/views/set_formulas/index.html.erb
+++ b/app/views/set_formulas/index.html.erb
@@ -115,7 +115,7 @@
 								<td class="center"><a href="<%= item.view_url.force_encoding("UTF-8") %>" target="_blank"><%= item.title.force_encoding("UTF-8") %></a></td>
 								<td class="center"><%= item.formula %></td>
 								<td class="center"><%= item.game_platform %></td>
-								<td class="center"><%= item.game_coins_amount %></td>
+								<td class="center"><%= number_with_delimiter(item.game_coins_amount) %></td>
 								<td class="center"><%= item.category_name.force_encoding("UTF-8")  %></td>
 								<td class="center">
 									<a class="btn btn-success" href="<%= edit_set_formula_path(item)%>"> Edit Formula</a>
