--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -61,6 +61,11 @@
 								
 								</ul>	
 							</li>	
+							
+							<li>
+								<a class="ajax-link" href="/set_formulas/activity_logs"><span class="hidden-tablet">Activity Logs</span></a>
+								
+							</li>	
 						</ul>
 					</div><!--/.well -->
 				</div><!--/span-->
