--- a/app/views/set_formulas/edit.html.erb
+++ b/app/views/set_formulas/edit.html.erb
@@ -29,12 +29,12 @@
 
 					<div class="control-group" id="first_name" style="padding-top:2%">
 						<label class="control-label" for="inputError" style="margin-left:15%;float:left"><strong>Item ID:</strong></label>
-						<div class="controls" style="margin-left:30%"><%= @item.item_id %></div>
+						<div class="controls" style="margin-left:30%"><%= @item_details.item_id %></div>
 					</div>
 					
 					<div class="control-group" id="first_name" style="padding-top:2%">
 						<label class="control-label" for="inputError" style="margin-left:15%;float:left"><strong>Item Title:</strong></label>
-						<div class="controls" style="margin-left:30%"><%= @item.title %></div>
+						<div class="controls" style="margin-left:30%"><%= @item_details.title %></div>
 					</div>
 				
 					<div class="control-group" id="last_name" style="padding-top:2%">
