--- a/app/views/set_formulas/index.html.erb
+++ b/app/views/set_formulas/index.html.erb
@@ -109,16 +109,18 @@
 					</tr>
 				</thead>
 				
-					<% @items.each do |item| %>
+					<% @items.each do |item| 
+						item_formula = ItemFormula.find_by_ebay_item_id(item.item_id)
+					%>
 							<tr>
 								<td class="center"><%= item.item_id %></td>
 								<td class="center"><a href="<%= item.view_url.force_encoding("UTF-8") %>" target="_blank"><%= item.title.force_encoding("UTF-8") %></a></td>
-								<td class="center"><%= item.formula %></td>
-								<td class="center"><%= item.game_platform %></td>
-								<td class="center"><%= number_with_delimiter(item.game_coins_amount) %></td>
+								<td class="center"><%= item_formula.present? ? item_formula.formula : '' %></td>
+								<td class="center"><%= item_formula.present? ? item_formula.game_platform : ''%></td>
+								<td class="center"><%= item_formula.present? ? number_with_delimiter(item_formula.game_coins_amount) : ''%></td>
 								<td class="center"><%= item.category_name.force_encoding("UTF-8")  %></td>
 								<td class="center">
-									<a class="btn btn-success" href="<%= edit_set_formula_path(item)%>"> Edit Formula</a>
+									<a class="btn btn-success" href="<%= edit_set_formula_path(item.item_id)%>"> Edit Formula</a>
 								</td>
 							</tr>
 					<% end %>
