fixed sorting issue

--- a/app/views/set_formulas/edit.html.erb
+++ b/app/views/set_formulas/edit.html.erb
@@ -62,11 +62,11 @@
 					
 					
 					
-					<div class="form-actions">
+					<div class="form-actions" style="padding-top:50px">
 						<button type="submit" class="btn btn-primary" style="margin-left:20%;float:left">
 							Update
 						</button>
-						<button class="btn" id="cancel" type="button" style="margin-left:2%;float:left" onclick="javascript:history.back();">
+						<button class="btn" id="cancel" type="button" style="margin-left:5%;float:left" onclick="javascript:history.back();">
 							Cancel
 						</button>
 					</div>
