--- a/app/views/jobs/pending.html.erb
+++ b/app/views/jobs/pending.html.erb
@@ -29,7 +29,7 @@
 				<thead>
 					<tr>
 						<td width="15%">Item Id</td>
-						<td width="15%">Price(Send to Update)</td>
+						<td width="15%">Updated entity(Send to Update)</td>
 						<td width="15%">No. Of Attempts</td>
 						<td width="40%">Error</td>
 						<td width="20%">Created Date</td>
