--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -56,6 +56,11 @@
 			
 			<strong>Base Price for PS:</strong><span style="padding-left:10px"><%= @country_bprice.ps_base_price %></span>
 		</div>
+		
+		<div style="padding-left:10px;padding-top:10px">
+			
+			<strong>Quantity:</strong><span style="padding-left:10px"><%= @country_bprice.quantity %></span>
+		</div>
 		<% end %>
 		
 	<div class="box-content">
@@ -73,8 +78,11 @@
 			<table class="table table-striped table-bordered bootstrap-datatable datatable">
 				<thead>
 					<tr>
-					 	<td colspan="6"><button type="submit" class="btn btn-primary bulk_update" style="float:left">Bulk Price Update</button>
-					 		<a href="<%=  items_path(:sync => "sync")%>"><button type="Button" class="btn btn-primary" style="float:left;margin-left:10px;">Sync With Ebay</button></a>
+					 	<td colspan="12">
+					 		<button type="submit" class="btn btn-primary bulk_update" style="float:left">Bulk Price Update</button>
+					 		<button type="submit" class="btn btn-primary bulk_quantity" style="float:left;margin-left:20px;">Bulk Quantity Update</button>
+					 		
+					 		<a href="<%=  items_path(:sync => "sync")%>"><button type="Button" class="btn btn-primary" style="float:left;margin-left:20px;">Sync With Ebay</button></a>
 					 	</td>
 					 	
 					</tr>
@@ -87,9 +95,10 @@
 						<td width="7%"><%= sortable("game_coins_amount", "Game Coins Amount") %></td>
 						<td width="10%">Formula</td>
 						<td width="6%">Quantity Available</td>
+						<td width="6%">New Quantity</td>
 						<td width="7%">Price</td>
 						<td width="9%">New Price</td>
-						<td width="6%">Synced Date</td>
+						
 						<td width="8%">Actions</td>
 					</tr>
 				</thead>
@@ -110,9 +119,11 @@
 								<td class="center"><%= item_formula.present? ? number_with_delimiter(item_formula.game_coins_amount) : ''%></td>
 								<td class="center"><%= g_formula %></td>
 								<td class="center"><%= item.quantity_available %></td>
+								<td class="center"><input type="text" name="quantity_<%= item.item_id%>" id="quantity_<%= item.item_id%>" style="width:90%" value="<%=  new_quantity(item.country, @country_bprice)%>"></td>
+								
+								
 								<td class="center"><%= item.currency %>&nbsp;<%= item.buy_it_now_price %></td>
 								<td class="center"><input type="text" name="price_<%= item.item_id%>" id="price_<%= item.item_id%>" style="width:90%" value="<%=  new_price(g_platform,g_formula , item.country, @country_bprice)%>"></td>
-								<td class="center"><%= item.created_at %></td>
 								<td class="center">
 									<a class="btn btn-success" href="/items/<%= item.item_id %>/edit"> Edit Price</a>
 								</td>
@@ -167,7 +178,32 @@
 				jQuery("#bulk_form").submit();
 			}
 		})
+		
+		jQuery(".bulk_quantity").click(function(e){
+			e.preventDefault();
+			var bool = true
+			if($(".chk:checked").length < 1) {
+				alert("Please select at least one item.")
+				bool = false
+			}
+			jQuery(".chk:checked").each(function() {
+				var item_id = jQuery(this).val();
+				var new_qantity = jQuery("#quantity_"+item_id).val();
+				if(new_qantity.length < 1){
+					alert("Please enter quantity for item ID #"+item_id);
+					bool = false
+				}	
+					
+			});
+			
+			if(bool) {
+				jQuery("#bulk_form").attr("action", "<%=  bulk_qupdate_items_path%>")
+				jQuery("#bulk_form").submit();
+			}
+		})
 	});
+	
+	
 	
 </script>	
 
